--- a/View/logresult.html
+++ b/View/logresult.html
@@ -44,7 +44,7 @@
                 </oj-collapsible>
                 
                 <oj-collapsible id="consoleLog" expanded="true">
-                    <span slot="header" style="font-size:18px;"><span> Conosle Log</span></span>
+                    <span slot="header" style="font-size:18px;"><span> Console Log</span></span>
                     <oj-table id='consoleLogTable' 
                         aria-label='Console Log Table' 
                         data='[[consoleLog]]' 
